close menu button visibility fix

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -33,7 +33,7 @@ header {
 .close-icon {
     width: 100%;
     margin: 12px 0 0 2px;
-    visibility: visible;
+    visibility: hidden;
 }
 .menu-container{
     position: fixed;
