--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ header .logo-container {
 .close-icon {
   width: 100%;
   margin: 12px 0 0 2px;
-  visibility: visible;
+  visibility: hidden;
 }
 
 .menu-container {
